# Website-Based-Chatbot-Using-Embeddings

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_backend.py  run_frontend.py  setup.bat  setup.sh
