[project]
name = "website-chatbot"
version = "0.1.0"
description = "RAG Chatbot using Agno, Gemini, and FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "streamlit>=1.31.0",
    "agno>=1.0.0",
    "google-generativeai>=0.3.2",
    "google-genai>=0.1.0",
    "lancedb>=0.5.0",
    "pylance",
    "tantivy>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0"
]
